# Plotter3D

./: .gitignore  CMakeLists.txt  README.org
include/: data_properties.hpp  data_surfaces.hpp  frame_plotter.hpp  parser.hpp  properties.hpp  renderer.hpp  window_surface_config.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: frame_plotter.cpp  main.cpp  parser  parser.cpp  renderer.cpp  window_surface_config.cpp
